# Qanto

./: .dockerignore  .env.example  .gitignore  .nextest.toml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bootnode  Dockerfile.qanto-node  FREE_TESTNET_ARCHITECTURE.md  FREE_TESTNET_READINESS_AUDIT.md  LICENSE  OVERVIEW.md  PUBLIC_TESTNET_LAUNCH.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TESTNET_ARCHITECTURE.md  TESTNET_READINESS_AUDIT.md  __init__.py  agents_part_aa  agents_part_ab  agents_part_ac  app.py  audit.toml  benchmark_results_1760294371.json  build_timestamp.txt  cli.py  config-freetier.toml  config.mainnet.toml  config.production-client.toml  config.production.toml  config.toml  config.toml.example  config.toml.mainnet  config_hyperscale.toml  (+25 more)
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Docs/: ROADMAP.md  cohort-a-rehearsal.md  external_review_package.md  node-operator-guide.md  rpc-api.md  threat_model.md  upgrade-procedure.md
Frontend/: package.json
Protocol_Core/qanto-core/: Cargo.toml
Protocol_Core/qanto-core/src/: balance_stream.rs  dag_aware_mempool.rs  docs.rs  lib.rs  mining_celebration.rs  perf_bench.rs  qanto_compat.rs  qanto_native_crypto.rs  qanto_net.rs  qanto_p2p.rs  qanto_serde.rs  qanto_storage.rs  storage_traits.rs
Protocol_Core/qanto-node/fuzz/: Cargo.toml
Protocol_Core/qanto-node/fuzz/fuzz_targets/: fuzz_bridge_proofs.rs  fuzz_tx_parsing.rs
Protocol_Core/qanto-relayer/: Cargo.toml
Protocol_Core/qanto-relayer/src/: main.rs
Protocol_Core/qanto-zk-sdk/: Cargo.toml
Protocol_Core/qanto-zk-sdk/src/: lib.rs
Scripts/: chaos_engine.rs  check_local_testnet_health.sh  deploy_production.sh  generate_snapshot.js  initialize_economic.js  perpetual_maintenance.rs  run_local_testnet.sh
SmartContracts/: WQNTO.sol  cex-listing-payload.json  deploy_wqnto.js  hardhat.config.js  package-lock.json  package.json  token-info.json
archive_config/: config_ap.toml  config_node0.toml  config_node1.toml  config_us.toml
benches/: bench_10m_tps.rs  main.rs  mempool_pending_vs_len.rs
benchmark_results/: benchmark_metrics_1760289187.csv  benchmark_result_1760289187.json
config/: genesis.json  validator-ap.toml
db_assistant_sim_24356/: IDENTITY  LOG
db_assistant_sim_43775/: IDENTITY  LOG
deployment/: README.md
diagnostics/: report.md
docker/: .env.example
docs/: Architecture.md  Deployment_Strategy.md  OptimizationStrategies.md  Optimizations.md  QANTOWALLET_GUIDE.md  ROADMAP.md  SCORING_SUMMARY.md  bridge-wqnto.md  node-operator-guide.md  rpc-api.md  test-optimization-summary.md  testnet-guide.md  testnet-plan.md  tokenomics.md  wallet-env-password.md
explorer/: README.md  package-lock.json  package.json  qanto-explorer-worker.js  qanto-explorer.html  server.js  start.sh
hf_bootnode/: Dockerfile  README.md
integration_test_db/: segment_000001.qdb  segment_000002.qdb  segment_000003.qdb  segment_000004.qdb  segment_000005.qdb  segment_000006.qdb  segment_000007.qdb  segment_000008.qdb
k8s/: configmap.yaml  namespace.yaml
migrations/: env.py
myblockchain/: Cargo.toml
myblockchain/benches/: blockchain_benchmarks.rs  main.rs
myblockchain/qanto_db/: 000008.sst  IDENTITY  LOG  LOG.old.1755302155647865  LOG.old.1755302197161898  LOG.old.1755302211908995  MANIFEST-000014  OPTIONS-000012
myblockchain/src/: blockchain_node.rs  jsonrpc_server.rs  kernel.cl  lib.rs  metal_gpu.rs  qanhash.cu  qanhash.metal  qanhash.rs  qanhash32x.rs
qanto-core/: Cargo.toml
qanto-core/src/: adaptive_mining.rs  balance_bus.rs  balance_stream.rs  block_stm.rs  consensus.rs  docs.rs  lib.rs  mining_celebration.rs  optimized_qdag.rs  pow.rs  qanto_compat.rs  qanto_native_crypto.rs  qanto_net.rs  qanto_net_impls.rs  qanto_p2p.rs  qanto_serde.rs  qanto_storage.rs  storage_adapter.rs
qanto-core/src/consensus/: difficulty.rs
qanto-core/src/crypto/: cuda_gpu.rs  error.rs  kernel.cl  metal_gpu.rs  mod.rs  qanhash.rs
qanto-core/src/wallet/: mod.rs
qanto-core/tests/: asert_props.proptest-regressions  asert_props.rs  storage_burst_32bps.rs
qanto-desktop-wallet/: package-lock.json  package.json
qanto-desktop-wallet/src-tauri/: Cargo.toml  tauri.conf.json
qanto-desktop-wallet/src-tauri/src/: app.rs  keystore.rs  lib.rs  main.rs  tx.rs
qanto-desktop/src-tauri/: Cargo.toml  tauri.conf.json
qanto-desktop/src-tauri/src/: main.rs
qanto-docs/: Dockerfile  README.md  docusaurus.config.js  package.json  sidebars-api.js  sidebars.js
qanto-rpc/: Cargo.toml  build.rs
qanto-rpc/proto/: qanto.proto
qanto-rpc/src/: server.rs
qanto_db/: IDENTITY  LOG
qanto_web/: __init__.py  routes.py
qantodag_db_evolved/: IDENTITY  LOG
qantodag_db_test/: IDENTITY  LOG  LOG.old.1753047380255713  LOG.old.1753047485948511  LOG.old.1753047578555187  LOG.old.1753048204841178  LOG.old.1753048376178958  LOG.old.1753048573291016  LOG.old.1753048803401031  LOG.old.1753048958392514  LOG.old.1753049104130475  LOG.old.1753049265701932  LOG.old.1753049359948510  LOG.old.1753049485651645  LOG.old.1753050052929078
scripts/: await_connectivity.sh  burn_admin_keys.js  deploy_farming.js  deploy_production.sh  run_local_testnet.sh  soak_test.sh
src/: adaptive_mining.rs  advanced_features.rs  analytics_dashboard.rs  block_producer.rs  config.rs  config_validation.rs  config_validator.rs  consensus.rs  consensus_engine.rs  decentralization.rs  decoupled_producer.rs  derive_genesis_key.rs  deterministic_mining.rs  diagnostics.rs  elite_mempool.rs  emission.rs  generate_wallet.rs  get_address.rs  graphql_server.rs  hame.rs  homomorphic.rs  import_wallet.rs  infinite_strata_node.rs  integration.rs  interoperability.rs  json_rpc.rs  keygen.rs  lib.rs  main.rs  memory_optimization.rs  mempool.rs  metrics.rs  miner.rs  mining_celebration.rs  monitor.rs  node.rs  node_keystore.rs  node_mining_adapter.rs  omega.rs  omega_enhanced.rs  (+41 more)
terraform/: docs-infrastructure.tf  main.tf
test_bps_db/: IDENTITY  LOG.old.1755331138829175  (+57 more)
tools/relayer/: Cargo.toml
tools/relayer/src/: main.rs
(+980 files in other folders)
