
# =============================================================================
# QANTO PROTOCOL - Virtual Workspace Manifest
# =============================================================================
# This is the master workspace configuration for the Qanto blockchain protocol.
# All crate packages live under Protocol_Core/ and Scripts/.
# =============================================================================

[workspace]
resolver = "2"
members = [
    "Protocol_Core/qanto-node",
    "Protocol_Core/qanto-core",
    "Protocol_Core/qanto-rpc",
    "Protocol_Core/myblockchain",
    "Protocol_Core/qanto-zk-sdk",
    "Scripts/tools/relayer",
    "qanto-desktop/src-tauri",
]

# Force secure versions to override transitive dependencies
[workspace.dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
mimalloc = { version = "0.1" }
ahash = { version = "0.8", features = ["serde"] }
# Security patches for transitive dependencies - force secure versions
quick-xml = { version = "0.41.0" }
quinn-proto = { version = "0.11.15" }
rustls-webpki = { version = "0.103.13" }
ring = { version = "0.17.12" }
hickory-proto = { version = "0.26.1" }
hickory-resolver = { version = "0.26.1" }
rustls = { version = "0.23" }

# Override vulnerable dependencies
[patch.crates-io]
# Replace derivative with synstructure for arkworks compatibility
derivative = { git = "https://github.com/mcarton/rust-derivative", branch = "master" }
# Force secure tracing-subscriber version for all transitive dependencies
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", tag = "tracing-subscriber-0.3.20" }
# Override ark-relations with a local patched manifest that depends on tracing-subscriber 0.3.20
ark-relations = { path = "patches/ark-relations" }
libp2p-dns = { path = "patches/libp2p-dns" }
libp2p-mdns = { path = "patches/libp2p-mdns" }
plist = { path = "patches/plist" }

# --- Build Profiles ---
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
incremental = false

[profile.dev]
opt-level = 1
