[package]
name = "my-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Trevor <trvorth@gmail.com>"]
description = "An advanced blockchain implementation with innovative DAG-based consensus and cryptographic enhancements for Qanto"
license = "MIT"
readme = "README.md"
keywords = ["blockchain", "dag", "cryptography", "scalability", "rust"]
categories = ["cryptography", "network-programming"]
repository = "https://github.com/trvorth/qanto"
exclude = ["target/", "tests/data/"]

[dependencies]
# Core 
anyhow = "1.0.86"
bincode = "1.3.3"
num-bigint = "0.4"
serde-big-array = "0.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "full", "time", "macros"] }
warp = "0.3"
log = "0.4.22"
env_logger = "0.11.8"
hex = "0.4.3"
nalgebra = "0.33.0"
regex = "1.10.6"
lru = "0.12.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
prometheus = { version = "0.14.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.5.0"
# atomic-shim = "0.1"  # Removed due to outdated crossbeam dependency with security vulnerabilities
num_cpus = "1.16.0"
thiserror = "1.0.63"
primitive-types = "0.12.2"
bytemuck = { version = "1.15.0", features = ["derive"] }

# Cryptography & Hashing
blake3 = { version = "1.5.3", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "batch", "serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sha3 = "0.10.8"

# Database
rocksdb = { version = "0.22.0", default-features = false, features = ["multi-threaded-cf"] }

# Parallelism & Concurrency
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.21"
dashmap = "6.0.1"
rayon = "1.10.0"

# P2P Networking
libp2p = { version = "0.56.0", features = [
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "tokio",
    "macros"
] }
futures = "0.3.30"

# Advanced cryptography and zero-knowledge proofs
aes-gcm = { version = "0.10.3", optional = true }
argon2 = { version = "0.5.3", optional = true }
zeroize = { version = "1.8.1", optional = true }
bellman = { version = "0.14.0", optional = true }
bls12_381 = { version = "0.8.0", optional = true }
ocl = { version = "0.19.7", optional = true }
opencl3 = { version = "0.9.3", optional = true, features = ["CL_VERSION_1_2"] }

# Rate limiting and backoff
governor = "0.10.0"
retry = "2.0.0" 

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
proptest = "1.4.0"
rand_core = "0.6.4"

[[bench]]
name = "main"
harness = false

[features]
default = []
zk = ["bellman", "bls12_381", "aes-gcm", "argon2", "zeroize"]
gpu = ["opencl3"]
metrics = ["prometheus"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "qanto-node"
path = "src/blockchain_node.rs"