[package]
name = "qanto-core"
version = "0.1.0"
edition = "2021"
authors = ["Trevor <trvorth@qanto.org>"]
description = "Core native implementations for Qanto blockchain - cryptography, networking, and serialization"
license = "MIT"
repository = "https://github.com/trvorth/qanto"
keywords = ["blockchain", "cryptography", "networking", "serialization", "rust"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core dependencies for native implementations
getrandom = "0.2.15"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.69"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = "2.6.1"
lazy_static = "1.5.0"
anyhow = "1.0.93"
log = "0.4.21"

# Async and networking
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread", "time"] }
futures = "0.3.30"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { workspace = true }

# Utilities
bincode = "1.3.3"
bytes = { version = "1.7.2", features = ["serde"] }
dashmap = "6.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
colored = "2.1.0"
async-trait = "0.1.83"
my-blockchain = { path = "../myblockchain" }
zstd = "0.12"

[dev-dependencies]
mockall = "0.12"