[package]
name = "qanto-core"
version = "0.1.0"
edition = "2021"
authors = ["Trevor <trvorth@qanto.org>"]
description = "Core native implementations for Qanto blockchain - cryptography, networking, and serialization"
license = "MIT"
repository = "https://github.com/trvorth/qanto"
keywords = ["blockchain", "cryptography", "networking", "serialization", "rust"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core dependencies for native implementations
getrandom = "0.2.15"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.69"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = "2.6.1"
lazy_static = "1.5.0"
anyhow = "1.0.93"
log = "0.4.21"

# Async and networking
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread", "time"] }
tokio-util = "0.7.12"
futures = "0.3.30"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { workspace = true }

# Utilities
bincode = "1.3.3"
bytes = { version = "1.7.2", features = ["serde"] }
dashmap = "6.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
colored = "2.1.0"
async-trait = "0.1.83"
zstd = "0.12"
primitive-types = "0.12"
rocksdb = "0.22.0"
rayon = "1.8"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytecheck = "0.6"
num_cpus = "1.0"
lru = "0.12.3"
sysinfo = "0.30.13"

# Crypto & GPU
memmap2 = "0.9"
once_cell = "1.19"
opencl3 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"

[features]
default = []
gpu = []
cuda = ["cudarc", "gpu"]
zk = []

[dependencies.cudarc]
version = "0.10.0"
optional = true
features = ["driver", "nvrtc"]

[dev-dependencies]
mockall = "0.12"
proptest = "1.4.0"
tempfile = "3.10"
