[package]
name = "qanto-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
bytes = "1.6"
async-trait = "0.1"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
protoc-bin-vendored = "3"
