[package]
name = "qanto-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "rustls", "ws"] }
futures-util = "0.3"
hex = "0.4.3"
qanto-zk-sdk = { path = "../qanto-zk-sdk" }
