[package]
name = "qanto-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10.8"
qanto-zk-sdk = { path = "../qanto-zk-sdk" }
