[package]
name = "qanto-zk-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = "2.2.0"
num-bigint = "0.4.6"
ml-kem = "0.2"
pqcrypto-traits = { version = "0.3.5", optional = true }
rand = "0.8.5"
hex = "0.4.3"
thiserror = "1.0"

[features]
analyzer = []
pqcrypto-legacy = ["dep:pqcrypto-traits"]
