[package]
name = "qanto-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.8", features = ["shell-execute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Security patch: force quick-xml >=0.41.0 (CVE-2026-0194, CVE-2026-0195)
quick-xml = "0.41"

[build-dependencies]
tauri-build = "1"
