[package]
name = "qanto-relayer"
version = "0.1.0"
edition = "2021"
authors = ["Trevor <trvorth@gmail.com>"]
description = "Production-ready cross-chain packet relayer for Qanto Protocol"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }
my-blockchain = { path = "../../myblockchain" }
qanto = { path = "../../" }

psutil = "3.2"

[[bin]]
name = "qanto-relayer"
path = "src/main.rs"
