[package]
name = "qanto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
# Defines this as an independent workspace to exclude it from root workspace tests

[dependencies]
libfuzzer-sys = "0.4"
qanto = { path = ".." }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Prevent this crate from being checked by cargo test in the main workspace
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "fuzz_tx_parsing"
path = "fuzz_targets/fuzz_tx_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bridge_proofs"
path = "fuzz_targets/fuzz_bridge_proofs.rs"
test = false
doc = false
